Add API key to profiles

--- a/templates/account/_helpers.html
+++ b/templates/account/_helpers.html
@@ -24,6 +24,9 @@
         <li class="padding-bottom-xs">
             <i class="fa fa-envelope fa-fw"></i> {{ user.email_addr }}
         </li>
+        <li class="padding-bottom-xs">
+            <i class="fa fa-key fa-fw"></i> {{ user.api_key }}
+        </li>
         {% endif %}
     </ul>
 
