--- a/templates/projects/_helpers.html
+++ b/templates/projects/_helpers.html
@@ -102,7 +102,7 @@
         <div class="col-xs-3 text-center">
             {% if project.overall_progress >= 100 %}
                 <span class="fa fa-check-square-o"></span>
-            {% elif project.overall_progress > 0 or project.published %}
+            {% elif project.overall_progress > 0 or project.published == 't' %}
                 {{ project.overall_progress | round | int }}% complete
             {% else %}
                 Unpublished
