--- a/templates/account/projects.html
+++ b/templates/account/projects.html
@@ -23,13 +23,13 @@
                     <h2>Published</h2>
                     {% for project in projects_published %}
                         {% if project.overall_progress < 100 %}
-                            {{ helper.render_project_short_summary(project) }}
+                            {{ helper.render_project_short_summary(current_user, project) }}
                         {% endif %}
                     {% endfor %}
 
                     {% for project in projects_published %}
                         {% if project.overall_progress >= 100 %}
-                            {{ helper.render_project_short_summary(project) }}
+                            {{ helper.render_project_short_summary(current_user, project) }}
                         {% endif %}
                     {% endfor %}
                 {% endif %}
@@ -37,7 +37,7 @@
                 {% if projects_draft %}
                     <h2>Draft</h2>
                     {% for project in projects_draft %}
-                        {{ helper.render_project_short_summary(project) }}
+                        {{ helper.render_project_short_summary(current_user, project) }}
                     {% endfor %}
                 {% endif %}
 
