--- a/templates/account/projects.html
+++ b/templates/account/projects.html
@@ -19,27 +19,8 @@
             <hr>
             {% if projects_published or projects_draft %}
 
-                {% if projects_published %}
-                    <h2>Published</h2>
-                    {% for project in projects_published %}
-                        {% if project.overall_progress < 100 %}
-                            {{ helper.render_project_short_summary(current_user, project) }}
-                        {% endif %}
-                    {% endfor %}
-
-                    {% for project in projects_published %}
-                        {% if project.overall_progress >= 100 %}
-                            {{ helper.render_project_short_summary(current_user, project) }}
-                        {% endif %}
-                    {% endfor %}
-                {% endif %}
-
-                {% if projects_draft %}
-                    <h2>Draft</h2>
-                    {% for project in projects_draft %}
-                        {{ helper.render_project_short_summary(current_user, project) }}
-                    {% endfor %}
-                {% endif %}
+                {{ helper.render_grid_projects(project, "Published", current_user) }}
+                {{ helper.render_grid_projects(project, "Draft", current_user) }}
 
             {% else %}
             <div class="col-xs-12">
