--- a/templates/projects/importers/flickr.html
+++ b/templates/projects/importers/flickr.html
@@ -24,18 +24,28 @@
             </div>
 
             </h3>
-            <div id="grant">
-                <p> To select an album click below to grant access to your Flickr account</p></br>
+
+            <div id="connecting">
+                <p>Attempting to connect to Flickr, please wait...</p>
+            </div>
+
+            <div id="grant" style="display:none;">
+                <p>To select an album click below to grant access to your Flickr account</p></br>
 
                 <p>
                     <a href="{{ url_for('flickr.login', next=url_for(target, short_name=project.short_name, type='flickr')) }}" class="btn btn-success">Log in to Flickr</a>
                 </p>
+
             </div>
-            <h3>Select an album, then click import:</h3>
-            <div class="row">
-                <ul id="albums" class="no-style">
-                </ul>
+
+            <div id="albums-container" style="display:none;">
+                <h3>Select an album, then click import:</h3>
+                <div class="row">
+                    <ul id="albums" class="no-style">
+                    </ul>
+                </div>
             </div>
+
             <br>
             {% if form %}
             <form role="form" method="post" action="{{ url_for(target, short_name=project.short_name) }}">
@@ -61,14 +71,16 @@
 <script>
     $(function() {
         $.get('/flickr/albums').done(function(albums) {
+            $('#connecting').hide();
             if (albums.hasOwnProperty('length') && albums.length > 0) {
+                $('#albums-container').show();
                 $('#revoke').show();
-                $('#grant').hide();
-                $('#albums-container').prepend('<p>'+"Select one of your albums:"+'</p>');
                 albums.forEach(function(album){
                     var albumElement = $('<li class="col-md-3 col-sm-4 col-xs-12 text-center-xs flickr-thumbnails"><h4><strong>'+album.title+'</strong></h4><img src="'+album.thumbnail_url+'" class="grey-border" alt="Flickr album thumbnail"><p class="small">'+album.photos+' photos</p><button id="'+album.id+'" class="btn btn-success btn-album">Select</button></li>');
                     $('#albums').append(albumElement);
                 });
+            } else {
+                $('#grant').show();
             }
             $(".btn-album").each(function(){
                 $(this).off('click').on('click', function(evt){
