Add author credit to about.html

--- a/templates/home/_about.html
+++ b/templates/home/_about.html
@@ -9,11 +9,11 @@
         <div class="col-md-11">
             <h1 class="inset-text-grey">About</h1>
             <p class="lead">
-                {{brand}}, in association with <a href="http://labs.bl.uk/" target="_blank">BL Labs</a>,
-                is a platform for hosting experimental crowdsourcing projects aimed at improving access to the diverse
-                collections held at the <a href="http://www.bl.uk" target="_blank">British Library</a>. By participating
-                in the crowdsourcing projects hosted here, you will have a direct impact on enabling future research at the
-                library.
+            	{{ brand }} is a platform built by <a href="https://github.com/alexandermendes" target="_blank">Alexander Mendes</a>, 
+            	in association with <a href="http://labs.bl.uk/" target="_blank">BL Labs</a>. It aims to create searchable catalogue 
+            	records for some of the hundreds of thousands of items that can only be found in printed and card catalogues. By 
+            	participating in the crowdsourcing projects hosted here, you will help researchers everywhere to access our 
+            	collections more easily in the future.
             </p>
         </div>
     </div>
