--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
         <link rel="shortcut icon" href="/static/img/favicon.png">
 
         <!-- Le styles -->
-        <link type="text/css" rel="stylesheet" href="{{url_for('static', filename='vendor/bootstrap.min.css')}}">
+        <link type="text/css" rel="stylesheet" href="{{url_for('static', filename='vendor/bootstrap-3.3.2/css/bootstrap.min.css')}}">
         <link type="text/css" rel="stylesheet" href="{{url_for('static', filename='vendor/browser-detection/browser-detection.min.css')}}">
         <link type="text/css" rel="stylesheet" href="{{url_for('static', filename='css/styles.min.css')}}?v=1.4.5">
         <link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400%7CPermanent+Marker">
