--- a/templates/projects/presenter.html
+++ b/templates/projects/presenter.html
@@ -10,6 +10,7 @@
             });
 </script>
 <script src="{{url_for('static', filename='js/pybossa/pybossa.js')}}" type="text/javascript"></script>
+<script src="{{url_for('static', filename='js/marc-code-lists.js')}}" type="text/javascript"></script>
 <div class="container container-main">
     {% include "_flash_messages.html" %}
     {% if invite_new_volunteers %}
