--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -848,7 +848,7 @@ h1 i, h2 i, h3 i {
     background-color: rgba(255, 255, 255, 0)
 }
 
-.dropdown-menu.opaque>li>a,
+.navbar .dropdown-menu.opaque>li>a,
 .navbar.opaque .nav > li > a,
 .navbar-default.opaque .navbar-nav>li>a:focus,
 .navbar-default.opaque .navbar-nav>.open>a:hover,
@@ -857,8 +857,8 @@ h1 i, h2 i, h3 i {
     color: #666
 }
 
-.dropdown-menu>li>a:focus,
-.dropdown-menu .nav-link a:hover,
+.navbar .dropdown-menu>li>a:focus,
+.navbar .dropdown-menu .nav-link a:hover,
 .nav .open>ul>li>a:hover,
 .nav .open>a:hover,
 .navbar .nav > li > a:hover {
@@ -866,29 +866,29 @@ h1 i, h2 i, h3 i {
     background-color: rgba(255, 255, 255, 0)
 }
 
-.nav > .nav-link.open > .dropdown-menu.opaque > li > a:hover,
+.nav > .nav-link.open > .navbar .dropdown-menu.opaque > li > a:hover,
 .nav > .nav-link.open a.dropdown-toggle:hover {
     color: #D00000;
 }
 
-.dropdown-menu {
+.navbar .dropdown-menu {
     top: 63px;
     background-color: rgba(0, 0, 0, 0.5)
 }
 
-.dropdown-menu .nav-link {
+.navbar .dropdown-menu .nav-link {
     background-color: rgba(255, 255, 255, 0)
 }
 
-.dropdown-menu.opaque {
+.navbar .dropdown-menu.opaque {
     background-color: rgba(255, 255, 255, 1)
 }
 
-.dropdown-menu>li>a {
+.navbar .dropdown-menu>li>a {
     color: #fff
 }
 
-.dropdown-menu .nav-link a:after {
+.navbar .dropdown-menu .nav-link a:after {
     width: 0
 }
 
