--- a/templates/projects/_helpers.html
+++ b/templates/projects/_helpers.html
@@ -3,7 +3,7 @@
     <ul>
         {% if pagination.has_prev %}
         <li>
-            <a href="{{ url_for_other_page(pagination.page - 1)}}">&laquo; Prev | </a>
+            <a href="{{ url_for_other_page(pagination.page - 1)}}">&laquo; </a>
         </li>
         {% endif %}
 
@@ -23,7 +23,7 @@
 
         {% if pagination.has_next %}
         <li>
-            <a href="{{ url_for_other_page(pagination.page + 1)}}"> | Next &raquo;</a>
+            <a href="{{ url_for_other_page(pagination.page + 1)}}"> &raquo;</a>
         </li>
         {% endif %}
     </ul>
