--- a/templates/base.html
+++ b/templates/base.html
@@ -23,11 +23,11 @@
         <!-- Le styles -->
         <link type="text/css" rel="stylesheet" href="{{url_for('static', filename='vendor/bootstrap-3.3.2/css/bootstrap.min.css')}}">
         <link type="text/css" rel="stylesheet" href="{{url_for('static', filename='vendor/browser-detection/browser-detection.min.css')}}">
-        <link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400%7CPermanent+Marker">
+        <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400%7CPermanent+Marker">
         <link type="text/css" rel="stylesheet" href="{{url_for('static', filename='fonts/font-awesome-4.4.0/css/font-awesome.min.css')}}">
         <link type="text/css" rel="stylesheet" href="{{url_for('static', filename='vendor/select2/css/select2.min.css')}}">
         <link type="text/css" rel="stylesheet" href="{{url_for('static', filename='vendor/select2/css/select2-bootstrap.min.css')}}">
-        <link type="text/css" rel="stylesheet" href="{{url_for('static', filename='css/styles.min.css')}}?v=1.4.9">
+        <link type="text/css" rel="stylesheet" href="{{url_for('static', filename='css/styles.min.css')}}?v=1.5.0">
 
         <!--[if lt IE 9]>
         <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
