Set active link for project dashboard

--- a/templates/projects/tasks.html
+++ b/templates/projects/tasks.html
@@ -1,5 +1,6 @@
 {% extends "/base.html" %}
 {% set active_page = "projects" %}
+{% set active_link = "dashboard" %}
 {% import "projects/_helpers.html" as helper %}
 
 {% block content %}
