--- a/templates/projects/_helpers.html
+++ b/templates/projects/_helpers.html
@@ -37,7 +37,8 @@
 
     {% if project %}
         <li class="divider"></li>
-        <li class="nav-link"><a href="{{url_for('project.tasks', short_name=project.short_name)}}">Dashboard</a></li>
+        <li class="nav-link"{% if active_link=="dashboard"%} active{% endif %}">
+            <a href="{{url_for('project.tasks', short_name=project.short_name)}}">Dashboard</a></li>
 
         <li class="nav-link{% if active_link=="update"%} active{% endif %}">
             <a href="{{url_for('project.update', short_name=project.short_name)}}"> Project Details</a>
