--- a/templates/projects/non_stats.html
+++ b/templates/projects/non_stats.html
@@ -1,9 +1,10 @@
 {% extends "/base.html" %}
 {% set active_page = "projects" %}
+{% set active_link = "stats" %}
 {% import "projects/_helpers.html" as helper %}
 
 {% block content %}
-{{ helper.render_project_local_nav(project, 'nostats', current_user, pro_features, staff_or_admin) }}
+{{ helper.render_project_local_nav(project, active_link, current_user, pro_features, staff_or_admin) }}
 <div class="container container-main">
     <div class="row">
         <div class="col-sm-9 col-sm-offset-3">
