And fix another active link

--- a/templates/projects/update.html
+++ b/templates/projects/update.html
@@ -1,6 +1,6 @@
 {% extends "/base.html" %}
 {% set active_page = "projects" %}
-{% set active_page = "update" %}
+{% set active_link = "update" %}
 {% import "projects/_helpers.html" as helper %}
 {% import "_formhelpers.html" as form_helper %}
 
