--- a/templates/projects/_helpers.html
+++ b/templates/projects/_helpers.html
@@ -63,9 +63,11 @@
         <li class="nav-link{% if active_link=="stats"%} active{% endif %}">
             <a href="{{url_for('project.show_stats', short_name=project.short_name)}}"> Statistics</a>
         </li>
+        {% if config.get('LIBCROWDS_ANALYST_URL') %}
         <li class="nav-link">
             <a href="{{ config['LIBCROWDS_ANALYST_URL]' }}/{{ project.short_name }}"> Analysis</a>
         </li>
+    {% endif %}
         <li class="nav-link">
             <a href="{{url_for('project.presenter', short_name=project.short_name)}}"> Contribute</a>
         </li>
