Update results page

--- a/templates/projects/results.html
+++ b/templates/projects/results.html
@@ -1,16 +1,11 @@
 {% extends "/base.html" %}
 {% set active_page = "projects"  %}
+{% set active_link = "results" %}
+{% import "projects/_helpers.html" as helper %}
 {% set active_project = project.short_name %}
 
 {% block content %}
-<script>
-    Modernizr.load({
-            test: window.JSON,
-            nope: '{{url_for('static', filename='js/vendor/json2.min.js')}}'
-            });
-</script>
-<script src="{{url_for('static', filename='js/libcrowds.js')}}" type="text/javascript"></script>
-<script src="{{url_for('static', filename='js/pybossa/pybossa.js')}}" type="text/javascript"></script>
+{{ helper.render_project_local_nav(project, active_link, current_user, pro_features, staff_or_admin) }}
 <div class="container container-main">
     {% include "_flash_messages.html" %}
     {% if project.info.results and n_results > 0 %}
