--- a/templates/projects/project.html
+++ b/templates/projects/project.html
@@ -26,7 +26,7 @@
                         <p>Contribute<br>Now</p>
                     </a>
                 </div>
-                {% if current_user.is_authenticated and (current_user.id = project.user_id or current_user.admin) %}
+                {% if current_user.is_authenticated and (current_user.id = project.owner_id or current_user.admin) %}
                     <a href="{{ url_for('project.tasks', short_name=project.short_name) }}">Project Dashboard</a>
                 {% endif %}
             </div>
