--- a/templates/projects/new.html
+++ b/templates/projects/new.html
@@ -17,8 +17,8 @@
             <form role="form" method="post" action="{{ url_for('project.new')}}" enctype="multipart/form-data">
                 {{ form.hidden_tag() }}
                 <fieldset>
-                    {{ render_field(form.name, placeholder="Title", label_text="Title", show_label=True, class="form-control", required="required", autofocus="autofocus") }}
-                    {{ render_field(form.short_name, placeholder="Abbreviated title", label_text="Abbreviated name", show_label=True, class="form-control", required="required") }}
+                    {{ render_field(form.name, placeholder="The name of the project.", show_label=True, class="form-control", required="required", autofocus="autofocus") }}
+                    {{ render_field(form.short_name, placeholder="A shortcut for accessing the project via the web.", show_label=True, class="form-control", required="required") }}
                     {{ render_field(form.long_description, class="form-control", rows="13", label_text="Long description", show_label=True, placeholder="Long description (use Markdown)!", required="required") }}
                     <div class="pull-right" role="group">
                         <a href="{{url_for('account.profile', name=current_user.name)}}" class="btn btn-default">Cancel</a>
