Add Discourse notification count

--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -40,7 +40,13 @@
                 <!-- See https://github.com/alexandermendes/pybossa-discourse -->
                 <li class="nav-link{% if active_page == 'community' %} active{% endif %}">
                     {% if 'pybossa_discourse' in plugins %}
-                    <a href="{{ url_for('discourse.index')}}">Community</a>
+                    <a href="{{ url_for('discourse.index')}}">Community <span id="notifications" class="badge badge-info"></span></a>
+                    <script>
+                        var notifications = {{ discourse.user_unread_notifications_count() }};
+                        if (notifications > 0) {
+                            $('#notifications').html(notifications)
+                        }
+                    </script>
                     {% else %}
                     <a href="{{ url_for('account.index')}}">Community</a>
                     {% endif %}
