--- a/templates/projects/project.html
+++ b/templates/projects/project.html
@@ -1,13 +1,19 @@
 {% extends "/base.html" %}
 {% set active_page = "projects" %}
 {% import "projects/_helpers.html" as helper %}
-{% set has_splash = "true" %}
 {% set description = project.description %}
 
 {% block content %}
 {% if project %}
 {% include "_flash_messages_floating.html" %}
-<div id="portal-splash" class="splash" data-src="{{ url_for('static', filename='img/splash/category_' + project.category_id|string + '.jpg') }}">
+
+{% if project.info['splash'] %}
+{% set has_splash = "true" %}
+<div class="splash" style="background-image: url('{{ project.info['splash'] }}');">
+{% else %}
+    <div style="height:100vh;">
+{% endif %}
+
     <div class="vcenter hcenter position-relative" style="height:100%;">
         <div class="container text-center ie-mid-vcenter padding-top-sm">
             <h1>{{ helper.render_project_title(project) }}</h1>
@@ -18,7 +24,8 @@
             {% endif %}
 
             <!-- Contribute button -->
-            <div class="col-xs-12 splash-dependant">
+            {% if project.info['splash'] %}
+            <div class="col-xs-12">
                 <a href="{{ url_for('project.presenter', short_name=project.short_name)}}"
                    data-progress="{{ overall_progress | round | int }}"
                    class="btn btn-circle btn-circle-large btn-circle-progress {% if overall_progress < 100 %}glowing-link{% endif %}">
@@ -29,17 +36,19 @@
                     <p>Contribute<br>Now</p>
                 </a>
             </div>
+            {% endif %}
         </div>
     </div>
 </div>
 
 {% if overall_progress < 100 %}
 <section class="pattern-white-wall box-shadow-white-top">
-    <p id="portal-attribution" class="attribution" data-category-id="{{ project.category_id }}"></p>
+    <p class="attribution">{{ project.info['splash_attribution'] }}</p>
 
     <div class="container container-padded">
         <div class="col-xs-10 col-xs-offset-1">
-            <div id="portal-video" data-src="{{ url_for('static', filename='video/category_' + project.category_id|string + '.mp4') }}">
+            <div class="row text-center container-padded">
+                {{ project.info['tutorial_video'] }}
             </div>
             {% if project.long_description %}
                 {{ project.long_description | e | markdown }}
@@ -75,7 +84,6 @@
 </section>
 
 <script src="{{url_for('static', filename='js/btn-progress.js')}}" type="text/javascript"></script>
-<script src="{{url_for('static', filename='js/portal.js')}}" type="text/javascript"></script>
 <link href="{{url_for('static', filename='css/btn-progress.css')}}" rel="stylesheet" type="text/css" />
 {% else %}
     {{ helper.render_non_existant_project() }}
