--- a/templates/projects/project.html
+++ b/templates/projects/project.html
@@ -43,12 +43,12 @@
 
 {% if overall_progress < 100 %}
 <section class="pattern-white-wall box-shadow-white-top">
-    <p class="attribution">{{ project.info['splash_attribution'] }}</p>
+    <p class="attribution">{{ project.info['splash_attribution']|safe }}</p>
 
     <div class="container container-padded">
         <div class="col-xs-10 col-xs-offset-1">
             <div class="row text-center container-padded">
-                {{ project.info['tutorial_video'] }}
+                {{ project.info['tutorial_video']|safe }}
             </div>
             {% if project.long_description %}
                 {{ project.long_description | e | markdown }}
