--- a/templates/projects/presenter.html
+++ b/templates/projects/presenter.html
@@ -9,7 +9,7 @@
             nope: '{{url_for('static', filename='js/vendor/json2.min.js')}}'
             });
 </script>
-<script src="{{url_for('static', filename='js/pybossa/pybossa.js')}}" type="text/javascript"></script>
+<script src="{{url_for('static', filename='js/pybossa/pybossa.js?v1.2.0')}}" type="text/javascript"></script>
 <script src="{{url_for('static', filename='js/marc-code-lists.js')}}" type="text/javascript"></script>
 <div class="container container-main">
     {% include "_flash_messages.html" %}
