--- a/templates/projects/new.html
+++ b/templates/projects/new.html
@@ -10,13 +10,16 @@
         <div class="col-xs-12 col-sm-10 col-sm-offset-1">
             {% include "_flash_messages.html" %}
             <div class="row vcenter hcenter">
-                <div class="col-sm-8 col-xs-12">
-                    <h1>Create a new project</h1>
-                </div>
-
                 {% if 'pybossa_github_builder' in plugins %}
+                    <div class="col-sm-8 col-xs-12">
+                        <h1>Create a new project</h1>
+                    </div>
                     <div class="col-sm-4 col-xs-12">
                         <a href="{{ url_for('github.new') }}" class="btn btn-primary pull-right">Create project from GitHub</a>
+                    </div>
+                {% else %}
+                    <div class="col-xs-12">
+                        <h1>Create a new project</h1>
                     </div>
                 {% endif %}
             </div>
