--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
         <link type="text/css" rel="stylesheet" href="{{url_for('static', filename='fonts/font-awesome-4.4.0/css/font-awesome.min.css')}}">
         <link type="text/css" rel="stylesheet" href="{{url_for('static', filename='vendor/select2/css/select2.min.css')}}">
         <link type="text/css" rel="stylesheet" href="{{url_for('static', filename='vendor/select2/css/select2-bootstrap.min.css')}}">
-        <link type="text/css" rel="stylesheet" href="{{url_for('static', filename='css/styles.min.css')}}?v=1.6.0">
+        <link type="text/css" rel="stylesheet" href="{{url_for('static', filename='css/styles.css')}}?v=1.6.0">
 
         <!--[if lt IE 9]>
         <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -53,6 +53,7 @@
         <script type="text/javascript" src="{{url_for('static', filename='vendor/browser-detection/browser-detection.min.js')}}"></script>
         <script type="text/javascript" src="{{url_for('static', filename='vendor/bootstrap-3.3.2/js/bootstrap.min.js')}}"></script>
         <script type="text/javascript" src="{{url_for('static', filename='vendor/select2/js/select2.min.js')}}"></script>
+        <script type="text/javascript" src="{{url_for('static', filename='js/flash-messages.js')}}"></script>
 
         {% include '_ga.html' ignore missing %}
         {% include '_gcs.html' ignore missing %}
@@ -85,6 +86,7 @@
             {% include "_navbar.html" %}
 
             <div class="container-fluid">
+                {% include "_flash_messages.html" %}
 
                 {% block content %}{% endblock %}
             </div>
