--- a/templates/_flash_messages.html
+++ b/templates/_flash_messages.html
@@ -1,12 +1,11 @@
-<div class="alert-messages">
+<div id="alert-messages">
     {% with messages = get_flashed_messages(with_categories=True) %}
         {%if messages %}
             {% for category, message in messages %}
-            <div id="msg_{{category}}" class="alert alert-{{category}} fade in">
-                <a class="close" data-dismiss="alert" href="#">&times;</a>
-                {{ message | safe}}
-            </div>
+                <script>
+                   pybossaNotify('{{message|safe}}', "{{category}}");
+                </script>
             {% endfor %}
-      {% endif %}
+        {% endif %}
     {% endwith %}
 </div>
