--- a/templates/projects/_helpers.html
+++ b/templates/projects/_helpers.html
@@ -69,6 +69,9 @@
                 <span id="unanalysed" class="badge badge-info"></span>
             </a>
         </li>
+        <li class="nav-link">
+            <a href="{{ config['LIBCROWDS_ANALYST_URL'] }}/{{ project.short_name }}/download"> Download Input</a>
+        </li>
         {% endif %}
         <li class="nav-link">
             <a href="{{url_for('project.presenter', short_name=project.short_name)}}"> Contribute</a>
