--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -9,9 +9,7 @@
 <div class="container container-main">
     <div class="row">
         <div class="col-sm-9 col-sm-offset-3">
-            <div class="col-xs-12 padding-bottom-xs">
-                <h1 class="inset-text-grey"><strong>Admin Options</strong></h1>
-            </div>
+            <h1><strong>Admin Options</strong></h1>
             <div id="projects" class="col-sm-6 col-md-4">
                 <a href="{{ url_for('account.projects', name=current_user.name) }}" rel="nofollow">
                 <div class="well well-link">
