--- a/templates/projects/tasks.html
+++ b/templates/projects/tasks.html
@@ -11,9 +11,7 @@
 <div class="container container-main">
     <div class="row">
         <div class="col-sm-9 col-sm-offset-3">
-            <div class="col-xs-12 padding-bottom-xs">
-                <h1 class="inset-text-grey"><strong>Project Dashboard</strong></h1>
-            </div>
+            {{ helper.render_project_title(project, subtitle="Dashboard") }}
 
             {% if (current_user.is_authenticated() and project.owner_id == current_user.id) or current_user.admin %}
                 <div id="import_tasks" class="col-sm-6 col-md-4">
